fixed teams container height... description was not visible

--- a/components/PreviewWrapper/Preview.scss
+++ b/components/PreviewWrapper/Preview.scss
@@ -195,7 +195,6 @@
 
 /* Mobile styles */
 @media (max-width: 700px) {
-
   .items {
     position: relative;
     left: 0;
@@ -220,11 +219,11 @@
   }
 
   .preview .preview-tags {
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
   }
 
   .preview .preview-title {
-    margin-bottom: 2rem; 
+    margin-bottom: 2rem;
   }
 
   .preview img {
@@ -234,7 +233,7 @@
     width: 100%;
     height: 100%;
     object-fit: contain;
-    object-position: center; 
+    object-position: center;
     margin-bottom: 2rem;
   }
 
@@ -269,5 +268,9 @@
   .preview.variant-3 .preview-desc,
   .preview.variant-4 .preview-desc {
     position: static;
+  }
+
+  .container {
+    height: 100%;
   }
 }
